package printscript.runtime

public fun interface ProgramInput {

    public fun readLine(prompt: String): String?
}
