package printscript.runtime

public interface ProgramOutput {

    public fun writeLine(line: String)
}
