package printscript.statement

import printscript.model.source.SourceSpan

public interface Statement {

    public val span: SourceSpan
}
