@startuml printscript-estructura
title PrintScript — Contratos y puntos de extensión
skinparam shadowing false
hide empty members

package "source-reader" {
  interface SourceReader {
    +readChunk(): SourceChunkReadResult
  }
}
package "token-source" {
  interface TokenSource {
    +nextToken(): TokenReadResult
  }
}
package "lexer" {
  interface Lexer {
    +tokenize(reader: SourceReader): TokenSource
  }
  interface TokenScanner {
    +canStartWith(character: Char): Boolean
    +scan(cursor, startingCharacter): TokenScanResult
  }
}
package "statement-source" {
  interface Statement {
    +span: SourceSpan
  }
  interface StatementSource {
    +nextStatement(): StatementReadResult
  }
}
package "printscript-ast" {
  class "Expression (sealed)" as Expression
  class "Statements oficiales\nBlockStatement, IfStatement, ..." as AST
  AST ..|> Statement
}
package "parser" {
  interface Parser {
    +parse(tokens: TokenSource): StatementSource
  }
  interface StatementParser {
    +startTokenType: TokenType
    +parseStatement(context): ParsingResult
  }
}
package "interpreter" {
  interface Interpreter {
    +interpret(source: StatementSource): InterpretationResult
  }
  interface "StatementExecutor<S>" as Executor {
    +supportsStatement(statement): Boolean
    +executeStatement(statement, context): ExecutionResult<S>
  }
  class "StatementExecutionContext<S>" as Context {
    +state: S
    +withState(state): StatementExecutionContext<S>
    +executeStatements(statements): ExecutionResult<S>
  }
  Executor ..> Context
}
package "printscript-runtime" {
  interface Environment
  interface ExpressionEvaluator
  interface ProgramInput
  interface ProgramOutput
  interface EnvironmentVariableProvider
  class "RuntimeValue (sealed)" as Value
  ExpressionEvaluator ..> Environment
  ExpressionEvaluator ..> Value
}
package "formatter" {
  interface Formatter {
    +format(tokens: TokenSource): FormattedSource
  }
  interface TokenGapFormattingRule {
    +supports(gap): Boolean
    +formatWhitespace(gap): WhitespaceFormattingResult
    +afterFormatting(gap, whitespace): TokenGapFormattingRule
    +afterConsuming(token): TokenGapFormattingRule
  }
}
package "linter" {
  interface Linter {
    +lint(source: StatementSource): DiagnosticSource
  }
  interface LintRule {
    +inspect(statement): RuleInspection
  }
  class CompositeRule
  CompositeRule ..|> LintRule
  CompositeRule o--> LintRule
}
package "printscript-v1" {
  class "Factories V1 / V1.1" as Factories
  interface Validator {
    +validate(source: StatementSource): ValidationResult
  }
  class "Reglas públicas del linter\nIdentifierNaming / PrintlnArgument / ReadInputArgument" as Rules
  Rules ..|> LintRule
  Validator ..> Interpreter : reutiliza el motor
}
package "cli" {
  class PrintScriptCommandFactory
  class PrintScriptToolchainFactory
  PrintScriptCommandFactory ..> PrintScriptToolchainFactory
  PrintScriptToolchainFactory ..> Factories
}

Lexer ..> SourceReader : consume
Lexer ..> TokenSource : produce
Lexer ..> TokenScanner : configura
Parser ..> TokenSource : consume
Parser ..> StatementSource : produce
Parser ..> StatementParser : configura
Interpreter ..> StatementSource : consume
Interpreter ..> Executor : configura
Linter ..> StatementSource : consume
Linter ..> LintRule : configura
Formatter ..> TokenSource : consume
Formatter ..> TokenGapFormattingRule : configura
Validator ..> StatementSource : consume
Factories ..> Lexer
Factories ..> Parser
Factories ..> Interpreter
Factories ..> Formatter
Factories ..> Linter
Factories ..> Validator
Factories ..> Expression
Factories ..> Environment

legend bottom
  Vista resumida de contratos, no inventario completo de clases ni dependencias Gradle.
  Statement es abierto; Expression y RuntimeValue son dominios sellados.
  Las reglas concretas del lenguaje y la composición por versión viven en printscript-v1.
endlegend
@enduml
